k8s/services/manifests/minio/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    shared-gateway-access: 'true'
