k8s/services/manifests/minio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-minio
  namespace: minio
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - minio.furonverse.com
  rules:
    - backendRefs:
        - kind: Service
          name: minio
          port: 9001
